# py_for_pip

./: .gitignore  README.md  pyproject.toml
fancyhello/: __init__.py  fancyprinter.py
