[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fancyhello"
version = "1.0.0"
authors = [
 { name="Drew Ogle", email="drew@aperturedata.io" },
]
description = "A simple package to test pip+git"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
	"Programming Language :: Python :: 3",
	"License :: OSI Approved :: MIT License",
	"Operating System :: OS Independent",
]

dependencies = [
	"rich>=13.5.2"
]

[project.urls]
"Homepage" = "https://github.com/drewaogle/py_for_pip"
"Bug Tracker" = "https://github.com/drewaogle/py_for_pip/issues"

